# puppy-store

./: pyproject.toml
core/: settings.py  urls.py
puppies/: models.py  serializers.py  urls.py  views.py
puppies/migrations/: 0001_initial.py
puppies/tests/: test_models.py  test_views.py
