[tool.poetry]
name = "puppy-store"
version = "0.1.0"
description = ""
authors = ["Isaias Almeida <isaiasalmeida319@gmail.com>"]
readme = "README.md"
packages = [{include = "puppy_store"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
